--- a/Drinkit/Localization/ar.lproj/MainModule.strings
+++ b/Drinkit/Localization/ar.lproj/MainModule.strings
@@ -6,6 +6,7 @@
   
 */
 
-"name" = "Moscow";
-"login" = "login";
-"openingHours" = "to";
+"name" = "موسكو";
+"login" = "تسجيل الدخول";
+"openingHours" = "ل";
+"flavor" = "نكهة";
